add troop 370 meeting planner to forms and documents

--- a/_collections/_information/forms-documents.html
+++ b/_collections/_information/forms-documents.html
@@ -18,7 +18,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Merit Badge Counselor Application.pdf"
+              link="/src/documents/Merit Badge Counselor Application.pdf"
               name="Merit Badge Counselor Application"
               date="14 Oct 2015"
               type="pdf"
@@ -34,7 +34,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Youth Application Instructions.pdf"
+              link="/src/documents/Youth Application Instructions.pdf"
               name="Youth Application Instructions"
               date="29 Sep 2016"
               type="pdf"
@@ -42,7 +42,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Adult Application Instructions.pdf"
+              link="/src/documents/Adult Application Instructions.pdf"
               name="Adult Application Instructions"
               date="29 Sep 2016"
               type="pdf"
@@ -56,7 +56,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Senior Patrol Leader.docx"
+              link="/src/documents/leadership-applications/Troop 370 Senior Patrol Leader.docx"
               name="Senior Patrol Leader"
               date="13 Sep 2018"
               type="docx"
@@ -64,7 +64,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Assistant Senior Patrol Leader.docx"
+              link="/src/documents/leadership-applications/Troop 370 Assistant Senior Patrol Leader.docx"
               name="Assistant Senior Patrol Leader"
               date="13 Sep 2018"
               type="docx"
@@ -72,7 +72,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Patrol Leader.docx"
+              link="/src/documents/leadership-applications/Troop 370 Patrol Leader.docx"
               name="Patrol Leader"
               date="13 Sep 2018"
               type="docx"
@@ -80,7 +80,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Quartermaster.docx"
+              link="/src/documents/leadership-applications/Troop 370 Quartermaster.docx"
               name="Quartermaster"
               date="13 Sep 2018"
               type="docx"
@@ -88,7 +88,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Instructor.docx"
+              link="/src/documents/leadership-applications/Troop 370 Instructor.docx"
               name="Instructor"
               date="26 Sep 2018"
               type="docx"
@@ -96,7 +96,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Outdoor Ethics Guide.docx"
+              link="/src/documents/leadership-applications/Troop 370 Outdoor Ethics Guide.docx"
               name="Outdoor Ethics Guide"
               date="13 Sep 2018"
               type="docx"
@@ -104,7 +104,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/leadership-applications/Troop 370 Webmaster.docx"
+              link="/src/documents/leadership-applications/Troop 370 Webmaster.docx"
               name="Webmaster"
               date="13 Sep 2018"
               type="docx"
@@ -112,7 +112,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Guidelines for Positions of Leadership.pdf"
+              link="/src/documents/Guidelines for Positions of Leadership.pdf"
               name="Guidelines for Positions of Leadership"
               date="7 Nov 2017"
               type="pdf"
@@ -126,7 +126,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Parts A, B, and C.pdf"
+              link="/src/documents/Parts A, B, and C.pdf"
               name="Parts A, B, and C"
               date="3 May 2018"
               type="pdf"
@@ -134,7 +134,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Part D.pdf"
+              link="/src/documents/Part D.pdf"
               name="Part D (Only for High Adventure)"
               date="26 Jan 2018"
               type="pdf"
@@ -156,7 +156,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Harry Mountaineering Book.pdf"
+              link="/src/documents/Harry Mountaineering Book.pdf"
               name="Mountaineer Guide Book"
               date="9 May 2019"
               type="pdf"
@@ -172,7 +172,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Harry Packing List.pdf"
+              link="/src/documents/Harry Packing List.pdf"
               name="Harry's Packing List"
               date="∞"
               type="pdf"
@@ -180,7 +180,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Harry Packing List for FallSpring Backpacking.pdf"
+              link="/src/documents/Harry Packing List for FallSpring Backpacking.pdf"
               name="Harry's Packing List for Fall/Spring Backpacking"
               date="29 Jan 2016"
               type="pdf"
@@ -202,7 +202,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Cooking Patrol Roster Sheet (Yellow Sheet).docx"
+              link="/src/documents/Cooking Patrol Roster Sheet (Yellow Sheet).docx"
               name="Cooking Patrol Roster Sheet (Yellow Sheet)"
               date="18 Sep 2013"
               type="docx"
@@ -210,7 +210,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Campout Planning Form.pdf"
+              link="/src/documents/Campout Planning Form.pdf"
               name="Campout Planning Form"
               date="30 Oct 2017"
               type="pdf"
@@ -218,7 +218,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Meal Planning Guidebook.pdf"
+              link="/src/documents/Meal Planning Guidebook.pdf"
               name="Meal Planning Guidebook"
               date="∞"
               type="pdf"
@@ -226,7 +226,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Campout Agenda Outline.docx"
+              link="/src/documents/Campout Agenda Outline.docx"
               name="Campout Agenda Outline"
               date="18 Sep 2013"
               type="docx"
@@ -234,7 +234,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Campfire Program Planner 2011.pdf"
+              link="/src/documents/Campfire Program Planner 2011.pdf"
               name="Campfire Program Planner"
               date="01 Jan 2011"
               type="pdf"
@@ -242,7 +242,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Patrol Shopper Reimbursement.pdf"
+              link="/src/documents/Patrol Shopper Reimbursement.pdf"
               name="Patrol Shopper Reimbursement"
               date="29 Sep 2016"
               type="pdf"
@@ -250,7 +250,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Outdoor Ethics Guide Handbook 2018.pdf"
+              link="/src/documents/Outdoor Ethics Guide Handbook 2018.pdf"
               name="Outdoor Ethics Guide Handbook"
               date="01 Jan 2018"
               type="pdf"
@@ -264,7 +264,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/[Blank]Patrol.docx"
+              link="/src/documents/[Blank]Patrol.docx"
               name="Patrol Uniform Inspection Form"
               date="08 Aug 2018"
               type="docx"
@@ -272,7 +272,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/[Example]Patrol.docx"
+              link="/src/documents/[Example]Patrol.docx"
               name="Example Form"
               date="02 Nov 2016"
               type="docx"
@@ -280,7 +280,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/How Scores Are Calculated.docx"
+              link="/src/documents/How Scores Are Calculated.docx"
               name="How Scores Are Calculated"
               date="11 Apr 2018"
               type="docx"
@@ -294,7 +294,7 @@ redirect_from: forms-documents.html
           {% include docs-table.html part="header" %}
           {% include docs-table.html
               part="row"
-              link="src/documents/Troop Resource Survey 2018.pdf"
+              link="/src/documents/Troop Resource Survey 2018.pdf"
               name="Troop Resource Survey"
               date="01 Jan 2018"
               type="pdf"
@@ -302,7 +302,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/New Parent Handbook.pdf"
+              link="/src/documents/New Parent Handbook.pdf"
               name="New Parent Handbook"
               date="∞"
               type="pdf"
@@ -310,7 +310,7 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/MSR Whisperlite International Instructions.pdf"
+              link="/src/documents/MSR Whisperlite International Instructions.pdf"
               name="MSR Whisperlite International Instructions"
               date="19 May 2018"
               type="pdf"
@@ -318,11 +318,19 @@ redirect_from: forms-documents.html
           %}
           {% include docs-table.html
               part="row"
-              link="src/documents/MSR Whisperlite Universal Instructions.pdf"
+              link="/src/documents/MSR Whisperlite Universal Instructions.pdf"
               name="MSR Whisperlite Universal Instructions"
               date="19 May 2018"
               type="pdf"
               size="2.6 MB"
+          %}
+          {% include docs-table.html
+              part="row"
+              link="/src/documents/Troop 370 Meeting Planner.pdf"
+              name="Troop 370 Meeting Planner"
+              date="07 Nov 2018"
+              type="pdf"
+              size="16 KB"
           %}
         </table>
       </div>
