add order spreading reminder at end of confirmation page for pine straw store

--- a/_collections/_store/pinestraw.html
+++ b/_collections/_store/pinestraw.html
@@ -15,6 +15,12 @@ redirect_from:
   .topnav:not(.scroll) .grid-item-title #topnav-title {
     color: #aac0eb;
   }
+  .ec-confirmation__step:last-of-type::after {
+    content: "Need to order spreading for your pine straw? Click the button below to continue shopping and order spreading.";
+    border-top: 1px solid #6e6d6d;
+    display: block;
+    padding: 8px 0 0 0;
+  }
 </style>
 <div class="content-strip content-strip--primary content-strip--center" style="background-image: url(/src/carousel-images/pineneedles_l.jpg);background-color: #3a3d54;background-blend-mode: multiply;height: calc(100vh - 71px);align-items: center;margin-top: -56px;">
   <div class="flex-item">
