add 2020 Woodruff Summer Camp

--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -26,6 +26,9 @@ redirect_from: camps-adventure.html
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
   <div class="flex-item">
+    <h3 class="mdc-typography--headline5">Summer Camp at Woodruff Scout Reservation</h3>
+    <p>June 7 - 13, 2019</p>
+    <p>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
