add 2019 Winter Camp

--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -17,6 +17,11 @@ redirect_from: camps-adventure.html
 </div>
 <div class="content-strip">
   <div class="flex-item">
+    <h3 class="mdc-typography--headline5">Winter Camp at Bert Adams Scout Reservation</h3>
+    <p>December 27 - 31, 2019</p>
+    <p>Winter Camp, one of the most unique resident camp experiences available to Scouts in Atlanta, includes over 30 merit badges and, including unique programs and merit badges that are not available at either of our summer camps. This camp includes 3 full days of activities, 4 nights camping in platform tents, 11 meals, and 3 evening cracker barrels.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScNiosmqyq5an0d7FdTGLgERZ86DGMth1A4oG1YTBNOqj00DQ/viewform" class="mdc-button">Sign up for Winter Camp</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF4rS_Pr-IaPDa2Wxu3noIwh-9g6cvPveMBfCvoubNxHN90w/viewform" class="mdc-button">Choose Merit Badges</a>
   </div>
 </div>
 <div class="content-strip content-strip--secondary">
