--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+            card-title="Holiday Wreaths Sale"
+            card-subtitle="Purchase by October 30"
+            card-href="/pay/wreaths.html"
+            button-text="More info &amp; Buy"
+            background-image="/src/carousel-images/spruceneedles.jpg"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
