remove wreaths card and replace with pine straw card

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
-            card-title="Holiday Wreaths Sale"
-            card-subtitle="Purchase by October 30"
-            card-href="/pay/wreaths.html"
+            card-title="Pine Straw Sale"
+            card-subtitle="Order by October 31"
+            card-href="/pay/pinestraw.html"
             button-text="More info &amp; Buy"
-            background-image="/src/carousel-images/spruceneedles.jpg"
+            background-image="/src/carousel-images/pineneedles_l.jpg"
         %}
         {% include main-carousel-card.html
             card-title="Update Contact Info"
