--- a/_collections/_store/wreaths.html
+++ b/_collections/_store/wreaths.html
@@ -2,6 +2,7 @@
 layout: default
 title: Holiday Wreaths
 nav_order: 2
+menu: hide
 ---
 <style media="screen">
   .topnav:not(.scroll) #main-nav > li > a {
