--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+            card-title="Shooting Sports Campout"
+            card-subtitle="November 16-17"
+            card-href="/members/campout-sign-up.html"
+            button-text="Sign Up"
+            background-image="/src/carousel-images/forest-with-mountains.png"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
