add merit badge counselor training

--- a/_collections/_information/forms-documents.html
+++ b/_collections/_information/forms-documents.html
@@ -164,6 +164,20 @@ redirect_from: forms-documents.html
           %}
         </table>
       </div>
+      <div class="tmd-table-wrapper">
+        <h4 class="tmd-table-header">Adult Training</h4>
+        <table class="tmd-table">
+          {% include docs-table.html part="header" %}
+          {% include docs-table.html
+              part="row"
+              link="/src/documents/Being A Merit Badge Counselor in Troop 370 (2019.11.06) R.pdf"
+              name="Being A Merit Badge Counselor"
+              date="6 Nov 2019"
+              type="pdf"
+              size="1.5 MB"
+          %}
+        </table>
+      </div>
     </div>
     <div class="col-2 files">
       <div class="tmd-table-wrapper">
