--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ title: Home
             background-image="/src/carousel-images/forest-with-mountains.png"
         %}
         {% include main-carousel-card.html
+          card-title="Being A Merit Badge Counselor"
+          card-subtitle="New Training Available in Adult Training section"
+          card-href="/information/forms-documents.html"
+          button-text="Go to docs page"
+          background-image="/src/carousel-images/blackboard.jpg"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
