--- a/_collections/_about/about.html
+++ b/_collections/_about/about.html
@@ -50,7 +50,7 @@ redirect_from: about.html
   <div class="flex-item">
     <h1>Get the New Parent Handbook</h1>
     <p>The Troop 370 New Parent Handbook is packed full of information.</p>
-    <a href="src/documents/New Parent Handbook.pdf" class="mdc-button standard-light-button mdc-button--outlined mdc-ripple-upgraded">
+    <a href="src/documents/New Parent Handbook 2019.pdf" class="mdc-button standard-light-button mdc-button--outlined mdc-ripple-upgraded">
       <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:24px;">
       <path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"></path>
       </svg>
