add index card for winter merit badge clinic 2020

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+          card-title="Merit Badge Clinic"
+          card-subtitle="8 February 2020"
+          card-href="/events/merit-badge-clinics.html"
+          button-text="Info &amp; Register"
+          background-image="/src/carousel-images/merit-badges.jpg"
+        %}
+        {% include main-carousel-card.html
           card-title="Being A Merit Badge Counselor"
           card-subtitle="New Training Available in Adult Training section"
           card-href="/information/forms-documents.html"
