--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+          card-title="Camp Cards"
+          card-subtitle="Learn selling information"
+          card-href="/events/camp-cards.html"
+          button-text="View info"
+          background-image="/src/carousel-images/bsa-activity-background-limited.jpg"
+        %}
+        {% include main-carousel-card.html
           card-title="Merit Badge Clinic"
           card-subtitle="8 February 2020"
           card-href="/events/merit-badge-clinics.html"
