add elections date

--- a/_collections/_events/additional-events.html
+++ b/_collections/_events/additional-events.html
@@ -44,6 +44,10 @@ menu: hide
           <td>Scout Sunday</td>
         </tr>
         <tr class="tmd-table-row">
+          <td>February 26</td>
+          <td>Troop Elections</td>
+        </tr>
+        <tr class="tmd-table-row">
           <td>May 2</td>
           <td>CPR Saturday</td>
         </tr>
