update Woodruff description with correct year and sign-up link

--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -8,6 +8,7 @@ redirect_from: camps-adventure.html
   <div class="flex-item">
     <h1>Camps/High Adventure</h1>
     <p>This page provides information about summer/winter camps, high adventure camps, and other special trips.  Registration, dates and other information can be found in either the event descriptions below or via the <a href="/calendar.html">troop calendar</a>. Information about the Troop's regular overnight trips can be found on the <a href="/calendar.html">troop calendar</a> or on the <a href="/campout-schedule-local-events.html">campout schedule page</a>.</p>
+    <a href="/woodruff-sc-sign-up.html" class="mdc-button">Sign up for Woodruff</a>
   </div>
 </div>
 <div class="content-strip content-strip--secondary">
@@ -18,7 +19,7 @@ redirect_from: camps-adventure.html
 <div class="content-strip content-strip--no-bottom-padding">
   <div class="flex-item">
     <h3 class="mdc-typography--headline5">Summer Camp at Woodruff Scout Reservation</h3>
-    <p>June 7 - 13, 2019</p>
+    <p>June 7 - 13, 2020</p>
     <p>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
   </div>
 </div>
