--- a/_collections/_payments/payments.html
+++ b/_collections/_payments/payments.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Payments
+redirect_from: payments.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
