add pine straw carousel card; remove merit badge clinic carousel card

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+          card-title="Pine Straw Sale"
+          card-subtitle="Order by 25 March 2020"
+          card-href="/pay/pinestraw.html"
+          button-text="Order online"
+          background-image="/src/carousel-images/pineneedles_l.jpg"
+        %}
+        {% include main-carousel-card.html
           card-title="Camp Cards"
           card-subtitle="Learn selling information"
           card-href="/events/camp-cards.html"
           button-text="View info"
           background-image="/src/carousel-images/bsa-activity-background-limited.jpg"
-        %}
-        {% include main-carousel-card.html
-          card-title="Merit Badge Clinic"
-          card-subtitle="8 February 2020"
-          card-href="/events/merit-badge-clinics.html"
-          button-text="Info &amp; Register"
-          background-image="/src/carousel-images/merit-badges.jpg"
         %}
         {% include main-carousel-card.html
           card-title="Being A Merit Badge Counselor"
