add okpik to camps high adventure page

--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -8,7 +8,6 @@ redirect_from: camps-adventure.html
   <div class="flex-item">
     <h1>Camps/High Adventure</h1>
     <p>This page provides information about summer/winter camps, high adventure camps, and other special trips.  Registration, dates and other information can be found in either the event descriptions below or via the <a href="/calendar.html">troop calendar</a>. Information about the Troop's regular overnight trips can be found on the <a href="/calendar.html">troop calendar</a> or on the <a href="/campout-schedule-local-events.html">campout schedule page</a>.</p>
-    <a href="/woodruff-sc-sign-up.html" class="mdc-button">Sign up for Woodruff</a>
   </div>
 </div>
 <div class="content-strip content-strip--secondary">
@@ -21,6 +20,7 @@ redirect_from: camps-adventure.html
     <h3 class="mdc-typography--headline5">Summer Camp at Woodruff Scout Reservation</h3>
     <p>June 7 - 13, 2020</p>
     <p>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
+    <a href="/woodruff-sc-sign-up.html" class="mdc-button">Sign up for Woodruff</a>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
@@ -39,7 +39,7 @@ redirect_from: camps-adventure.html
     <a href="/high-adventure-2020-sign-up.html" class="mdc-button">Sign up for New River Trek</a>
   </div>
 </div>
-<div class="content-strip">
+<div class="content-strip content-strip--no-bottom-padding">
   <div class="flex-item">
     <h3 class="mdc-typography--headline5">Northern Tier National High Adventure Base at Atikokan, Ontario</h3>
     <p>July 23 - August 2, 2020</p>
@@ -52,5 +52,18 @@ redirect_from: camps-adventure.html
     <h3 class="mdc-typography--headline5">Winter Camp at Bert Adams Scout Reservation</h3>
     <p>December 27 - 31, 2020</p>
     <p>Winter Camp, one of the most unique resident camp experiences available to Scouts in Atlanta, includes over 30 merit badges and, including unique programs and merit badges that are not available at either of our summer camps. This camp includes 3 full days of activities, 4 nights camping in platform tents, 11 meals, and 3 evening cracker barrels.</p>
+  </div>
+</div>
+<div class="content-strip content-strip--secondary">
+  <div class="flex-item">
+    <h2 class="mdc-typography--headline4">2021 Camps &amp; High Adventure</h2>
+  </div>
+</div>
+<div class="content-strip">
+  <div class="flex-item">
+    <h3 class="mdc-typography--headline5">Okpik Cold Weather Camping Adventure</h3>
+    <p>February 11 - 15, 2021</p>
+    <p>Okpik Cold Weather Camping, Northern Tier’s winter offering, is the BSA’s premier winter camping program. At Okpik, Scouts experience a true Northwoods winter: learning how to thrive in subzero temperatures, travel across frozen wilderness lakes and construct their own sleeping structures out of snow. All trips are fully outfitted and provisioned, including almost all of the personal gear necessary to stay warm in the winter. A highly trained staff member, called an Interpreter, accompanies all crews on their trek.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfedvNg1l3u7hVuRgOtmPilrRJeHS8t-7E1_aw4V1qyMy5Bng/viewform" class="mdc-button">Sign up for Okpik</a>
   </div>
 </div>
