add okpik announcement (page and carousel card)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ title: Home
           background-image="/src/carousel-images/pineneedles_l.jpg"
         %}
         {% include main-carousel-card.html
+          card-title="Okpik Cold Weather Camping"
+          card-subtitle="February 2021"
+          card-href="/events/okpik-camping-2021.html"
+          button-text="Sign up"
+          background-image="/src/bright-daytime-winter.jpg"
+        %}
+        {% include main-carousel-card.html
           card-title="Camp Cards"
           card-subtitle="Learn selling information"
           card-href="/events/camp-cards.html"
