fixes that dern capitalization issue

--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -77,7 +77,7 @@ redirect_from: camps-adventure.html
 </div>
   <div class="content-strip content-strip--no-bottom-padding">
     <div class="flex-item">
-      <h3 class="mdc-typography--headline5">Sea Base Florida Scuba Live Aboard at Islamorada, Fl</h3>
+      <h3 class="mdc-typography--headline5">Sea Base Florida Scuba Live Aboard at Islamorada, FL</h3>
       <p>June 26 – July 3, 2021</p>
       <p> Sea Base has combined scuba with a live aboard experience to create one incredible adventure. You will spend your days discovering the Florida Keys National Marine Sanctuary above and below the water’s surface. With a crew size of 10 to 12 people, your home will be aboard one or two vessels depending on availability and schedule. During this adventure, you will dive 11 or more times including night dives (weather permitting). When you are not diving, there will be opportunities for fishing and cruising the Florida Keys. You must be a certified diver to participate in this program. Medical restrictions apply. Call Sea Base for more details.</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-A3m2BHajzrMh04EkjPfYZ3VsI51v1P6Bz3eZ3oOasM657w/viewform?fbzx=2349280234058825473" class="mdc-button">Sign up for Sea Base Scuba Live Aboard</a>
