adds merit badge signup page + card

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+          card-title="Woodruff Merit Badge Signups"
+          card-subtitle="Sign up by 23 March 2020"
+          card-href="/events/woodruffmb2020signup.html"
+          button-text="Sign up for Merit Badges"
+          background-image="/src/carousel-images/merit-badges.jpg"
+        %}
+        {% include main-carousel-card.html
           card-title="Pine Straw Sale"
           card-subtitle="Order by 25 March 2020"
           card-href="/pay/pinestraw.html"
