extends spring pinestraw order deadline (covid-19)
this commit also adds a note to those with existing orders about getting the opportunity to cancel their order

--- a/_collections/_events/pinestraw.html
+++ b/_collections/_events/pinestraw.html
@@ -15,7 +15,8 @@ menu: hide
     <p>We sell premium full-sized bales of pine straw.</p>
     <p>Pine straw can be delivered to your house by scouts or picked up at the church. <a href="https://www.google.com/maps/dir/''/St.+James+United+Methodist+Church+4400+Peachtree+Dunwoody+Road+NE+,+Atlanta+30342">Click here for directions.</a><br>Scouts are available to go to the houses and spread.</p>
     <h3>2019-2020 Dates</h3>
-    <p>Fall Pine Straw Sales Date – November 2, 2019<br>Spring Pine Straw Sales Date – April 25, 2020 (post COVID-19 adjustment)</p>
+    <p>Fall Pine Straw Sales Date – November 2, 2019<br>Spring Pine Straw Sales Date – April 25, 2020 (post COVID-19 adjustment)*</p>
+    <p>*Note: If you ordered pine straw for delivery on March 28, you will receive an email allowing you to cancel your order if the April delivery is too late for you</p>
   </div>
 </div>
 <div class="content-strip content-strip--min-padding content-strip--no-bottom-padding">
