--- a/_collections/_store/pinestraw.html
+++ b/_collections/_store/pinestraw.html
@@ -39,7 +39,8 @@ redirect_from:
     <p>Pine straw can be delivered to your house by scouts or picked up at the church. <a href="https://www.google.com/maps/dir/''/St.+James+United+Methodist+Church+4400+Peachtree+Dunwoody+Road+NE+,+Atlanta+30342">Click here for directions.</a><br>Scouts are available to go to the houses and spread.</p>
     <p>Proceeds will be used to send Scouts from Troop 370 to summer camps and high adventure camps. Learn what kind of camps and high adventure Troop 370 scouts attend at our <a href="/camps-adventure.html">Camps/High Adventure page</a> and our <a href="/campout-schedule-local-events.html">Campout Schedule & Local Events page</a>.</p>
     <h3>2019-2020 Dates</h3>
-    <p>Fall Pine Straw Sales Date – November 2, 2019<br>Spring Pine Straw Sales Date – March 28, 2020</p>
+    <p>Fall Pine Straw Sales Date – November 2, 2019<br>Spring Pine Straw Sales Date – April 25, 2020 (post COVID-19 adjustment)*</p>
+    <p>*Note: If you ordered pine straw for a March 28 delivery, you will receive an email allowing you to cancel your order if the new April delivery is too late for you. Also, the deadline to order for the Spring sale has been extended to April 18.</p>
   </div>
 </div>
 <div class="content-strip content-strip--min-padding content-strip--no-bottom-padding">
