feat: add styles and imports for svelte material ui

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="%sveltekit.assets%/variables.css" />
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
+
+    <!-- SMUI Styles -->
+    <link rel="stylesheet" href="/smui.css" />
+
+    <!-- Material Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+    <!-- Roboto -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+    />
+
+    <!-- Roboto Mono -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
   </head>
   <body>
     <div>%sveltekit.body%</div>
