feat: add main flickity carousel component

--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,21 @@
 
     <!-- Roboto Mono -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
+
+    <!-- carousels -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.1.2/flickity.pkgd.min.js"
+      integrity="sha512-tajccQeT0muemBWmWdNrYuiAEP08a7X2fBBO3MBEA0h3Bjy24nytVAsVMi4Tdu+8fualFJNIeGcZcMAhKMAgUA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.1.2/flickity.min.css"
+      integrity="sha512-dEkBm/cSUw5rYRY+hHkcLS4MlVvRXn+b2UC02LjJ81TlXH7J9/iKu/7XwWRdLVmGw7gDx9Zo8FYTfkop3l0uZw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div>%sveltekit.body%</div>
