feat: add missing fonts from google fonts

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%sveltekit.assets%/img/troop370-logo/favicon.ico" />
     <link rel="stylesheet" href="%sveltekit.assets%/variables.css" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     %sveltekit.head%
 
     <!-- SMUI Styles -->
@@ -15,12 +17,18 @@
 
     <!-- Roboto -->
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
     />
 
     <!-- Roboto Mono -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
+
+    <!-- IBM Plex Sans -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- carousels -->
     <script
