feat: integrate strapi at /admin with a reverse proxy

--- a/src/app.html
+++ b/src/app.html
@@ -49,6 +49,19 @@
     <div>%sveltekit.body%</div>
   </body>
   <style>
+    :root {
+      --fds-accent-dark-1: 253, 54%, 47%;
+      --fds-accent-light-2: 253, 49%, 80%;
+
+      --titlebar-bg: #f3f3f3;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --titlebar-bg: #202020;
+      }
+    }
+
     /* progress bar styles */
     #nprogress {
       position: fixed;
