fix: restore initial meta theme-color

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/img/troop370-logo/favicon.ico" />
     <link rel="stylesheet" href="%sveltekit.assets%/variables.css" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="theme-color" content="#234ba8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     %sveltekit.head%
