feat: use custom navigation pane for strapi cms

--- a/src/app.html
+++ b/src/app.html
@@ -55,11 +55,13 @@
       --fds-accent-light-2: 253, 49%, 80%;
 
       --titlebar-bg: #f3f3f3;
+      --content-bg: #ffffff;
     }
 
     @media (prefers-color-scheme: dark) {
       :root {
         --titlebar-bg: #202020;
+        --content-bg: #272727;
       }
     }
 
