fix: use correct accent color for text-style buttons

--- a/src/app.html
+++ b/src/app.html
@@ -52,7 +52,10 @@
   <style>
     :root {
       --fds-accent-dark-1: 253, 54%, 47%;
+      --fds-accent-dark-2: 253, 54%, 47%;
+
       --fds-accent-light-2: 253, 49%, 80%;
+      --fds-accent-light-3: 253, 49%, 80%;
 
       --titlebar-bg: #f3f3f3;
       --content-bg: #ffffff;
